--- a/1.README.md
+++ b/1.README.md
@@ -1,19 +1,19 @@
-# Dirty Cafe Sales Data Cleaning Project
+# ☕ Dirty Cafe Sales — SQL Data Cleaning Project
 
-## Overview
+## 📌 Overview 
 
     This project focuses on cleaning and preparing the Dirty Cafe Sales dataset. The dataset contains 10,000 rows of synthetic data representing cafe sales. 
     The dataset has missing values, inconsistent data and errors. 
 
     This project demonstrates how to perform practical data cleaning and data wrangling.
 
-## Dataset Summary
+## 🗂️ Dataset Summary
 
     - dirty_cafe_sales.csv
     - 10,000 rows
     - 8 columns
 
-## Column Description
+## 📄 Column Descriptions
 
     | Column Name       | Description                                                      | Example                  |
     |-------------------|------------------------------------------------------------------|--------------------------|
@@ -26,26 +26,42 @@
     | Location          | Where transaction occurred (may be missing)                      | `In-store`, `Takeaway`   |
     | Transaction Date  | Date of transaction (may be missing or incorrect)                | `2023-01-01`             |
 
-## Tools
+## 🛠️ Tools Used
 
   - MySQL
+  - Excel
+  - GitHub
 
-## Data Cleaning Steps
+## 🧼 Data Cleaning Steps
 
-🧹 Step 1: Handle Invalid Values
-🛠️ Step 2: Rename Columns & Fix Data Types
-🔎 Step 3: Check for Duplicate Transactions
-🔢 Step 4: Validate Numeric Ranges
-🧠 Step 5: Impute Missing item Values Using Price (Where Unambiguous)
-💰 Step 6: Calculate Missing total_spent Values
-🕳️ Step 7: Leave Remaining NULLs for Unrecoverable Fields
-📦 Step 8: Create Final Cleaned Table
+- 🧹 Step 1: Handle Invalid Values
+- 🛠️ Step 2: Rename Columns & Fix Data Types
+- 🔎 Step 3: Check for Duplicate Transactions
+- 🔢 Step 4: Validate Numeric Ranges
+- 🧠 Step 5: Impute Missing Item Values Using Price (Where Unambiguous)
+- 💰 Step 6: Calculate Missing total_spent Values
+- 🕳️ Step 7: Leave Remaining NULLs for Unrecoverable Fields
+- 📦 Step 8: Create Final Cleaned Table
 
-## Project Motivation
-  
-    The project was selected as a hands-on opportunity to practice real-world data cleaning techniques. It demonstrates how to handle messy, inconsistent & incomplete datasets.
+## 📊 Exploratory Data Analysis (EDA)
+After cleaning the data, I performed exploratory analysis to identify sales patterns, item performance, and customer behaviour using **MySQL window functions, aggregates, and date functions**.
+- ❓ What are the top-selling items by quantity?
+- ❓ Which items generate the most revenue?
+- ❓ What are the peak revenue months?
+- ❓ What is the revenue trend over time (cumulative)?
+- ❓ When did each item pass £2,000 in total revenue?
+- ❓ What is the revenue breakdown by location?
+- ❓ What are the most common payment methods?
+- ❓ Which day of the week has the most sales?
 
-## License
+## 🚀 Project Motivation
+  This was selected as a **realistic cleaning challenge** to practise:
+- Handling messy datasets
+- Working with SQL `CASE`, `IS NULL`, data types
+- Performing logic-driven imputations
+- Preparing data for downstream analysis and visualisation
 
-    This dataset is synthetic and publicly available for educational use under the CC BY-SA 4.0 Licence.
+## 🔐 License 
+
+   This project uses synthetic data and is licensed under **CC BY-SA 4.0** for educational use.
     
